--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/_ViewImports.cshtml
@@ -3,5 +3,8 @@
 @using App.EndPoints.MvcUi.Models.Authenticate;
 @using App.EndPoints.MvcUi.Models.Home;
 @using App.Domain.Core._User.Entities;
-@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Identity;
+@using App.EndPoints.MvcUi.Areas.SellerArea.Models.ProductViewModels;
+@using App.EndPoints.MvcUi.Areas.SellerArea.Models.BoothViewModels;
+@using App.Domain.Core._Common.Dtos.AppSettingDtos;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
