--- a/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
@@ -1,7 +1,8 @@
-﻿@using App.EndPoints.MvcUi
-@using App.EndPoints.MvcUi.Models
+﻿@using App.EndPoints.MvcUi;
+@using App.EndPoints.MvcUi.Models;
 @using App.EndPoints.MvcUi.Models.Authenticate;
 @using App.EndPoints.MvcUi.Models.Home;
+@using App.Domain.Core._Booth.Dtos.BoothDtos;
 @using App.Domain.Core._User.Entities;
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
