--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/SellerPanel/Index.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/SellerPanel/Index.cshtml
@@ -25,7 +25,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="ec-vendor-dashboard-sort-card color-orange">
-                            <h5>موحودی قابل برداشت</h5>
+                            <h5>موجودی قابل برداشت</h5>
                             <h3>@Model.AccountBalance   </h3>
                         </div>
                     </div>
