--- a/App.EndPoints.MvcUi/Views/Shared/_Layout.cshtml
+++ b/App.EndPoints.MvcUi/Views/Shared/_Layout.cshtml
@@ -21,25 +21,33 @@
           content="~/assets/Home/images/favicon/favicon-8.png" />
 
     <!-- css Icon Font -->
-    <link rel="stylesheet" href="~/assets/Home/css/vendor/ecicons.min.css" />
+    <link rel="stylesheet" href="~/assets/Home/css/vendor/ecicons.min.css">
 
     <!-- css All Plugins Files -->
-    <link rel="stylesheet" href="~/assets/Home/css/plugins/animate.css" />
-    <link rel="stylesheet" href="~/assets/Home/css/plugins/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="~/assets/Home/css/plugins/jquery-ui.min.css" />
-    <link rel="stylesheet" href="~/assets/Home/css/plugins/countdownTimer.css" />
-    <link rel="stylesheet" href="~/assets/Home/css/plugins/nouislider.css" />
-    <link rel="stylesheet" href="~/assets/Home/css/plugins/slick.min.css" />
+    <link rel="stylesheet" href="~/assets/Home/css/plugins/animate.css">
+    <link rel="stylesheet" href="~/assets/Home/css/plugins/swiper-bundle.min.css">
+    <link rel="stylesheet" href="~/assets/Home/css/plugins/jquery-ui.min.css">
+    <link rel="stylesheet" href="~/assets/Home/css/plugins/countdownTimer.css">
+    <link rel="stylesheet" href="~/assets/Home/css/plugins/slick.min.css">
+    <link rel="stylesheet" href="~/assets/Home/css/plugins/nouislider.css">
+    <link rel="stylesheet" href="~/assets/Home/css/plugins/bootstrap.css">
     <link rel="stylesheet" href="~/assets/Home/css/plugins/owl.carousel.min.css" />
     <link rel="stylesheet" href="~/assets/Home/css/plugins/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="~/assets/Home/css/plugins/bootstrap.css" />
 
     <!-- Main Style -->
-    @if (   ViewData["Title"] == "AllBoothsList")
+    <link rel="stylesheet" href="~/assets/Home/css/demo8.css">
+    @if (ViewData["title"] == "ProductfullPage" || ViewData["title"] == "BoothProducts" || ViewData["title"] == "ParentCategoryNavbar" || ViewData["Style"] == "Style.css")
     {
-        <link rel="stylesheet" href="~/assets/Home/css/style.css" />
+        <link rel="stylesheet" href="~/assets/Home/css/style.css">
     }
-    <link rel="stylesheet" href="~/assets/Home/css/demo8.css" />
+    <link rel="stylesheet" href="~/assets/Home/css/rtl.css">
+    <link rel="stylesheet" href="~/assets/Home/css/responsive.css">
+
+    <!-- Background css -->
+    <link rel="stylesheet" id="bg-switcher-css" href="~/assets/Home/css/backgrounds/bg-4.css">
+
+
+
 </head>
 
 <body>
@@ -109,9 +117,14 @@
                                 <ul class="dropdown-menu dropdown-menu-right">
                                     @if (signInManager.IsSignedIn(User))
                                     {
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="Customer" asp-action="Index"> حساب من </a>
+                                        </li>
+
                                         <Form mathod="Post" asp-area="" asp-controller="Authenticate" asp-action="Logout">
                                         <li> <button type="submit" class="dropdown-item">خروج</button></li>
                                         </Form>
+
                                     }
                                     else
                                     {
@@ -198,6 +211,9 @@
                                     <ul class="dropdown-menu dropdown-menu-right">
                                     @if (signInManager.IsSignedIn(User))
                                     {
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="Customer" asp-action="Index"> حساب من </a>
+                                        </li>
                                         <Form mathod="Post" asp-area="" asp-controller="Authenticate" asp-action="Logout">
                                         <li> <button type="submit" class="dropdown-item">خروج</button></li>
                                         </Form>
@@ -217,6 +233,7 @@
                                     </ul>
                                 </div>
                                 <!-- Header User End -->
+
                                 <!-- Header Cart Start -->
                                 <a href="#ec-side-cart" class="ec-header-btn ec-side-toggle">
                                     <div class="header-icon">
@@ -224,9 +241,9 @@
                                              class="svg_img header_svg"
                                              alt="" />
                                     </div>
-                                    <span class="ec-header-count ec-cart-count cart-count-lable">3</span>
                                 </a>
                                 <!-- Header Cart End -->
+
                             </div>
                         </div>
                     </div>
@@ -366,11 +383,11 @@
                                 {
                                     @if (User.IsInRole("Admin"))
                                     {
-                                        <li><a href="index.html">پنل مدیریت </a></li>     
+                                        <li><a asp-area="AdminArea" asp-controller="AdminPanel" asp-action="Index">پنل مدیریت </a></li>
                                     }
                                     @if (User.IsInRole("Seller"))
                                     {
-                                        <li><a href="index.html">پنل غرفه</a></li>
+                                        <li><a asp-area="sellerArea" asp-controller="SellerPanel" asp-action="Index">پنل غرفه</a></li>
                                     }
                                     @if (User.IsInRole("Csutomer"))
                                     {
@@ -592,47 +609,10 @@
     <div class="ec-side-cart-overlay"></div>
     <div id="ec-side-cart" class="ec-side-cart">
         <div class="ec-cart-inner">
-            <div class="ec-cart-top">
-                <div class="ec-cart-title">
-                    <span class="cart_title">سبد خرید</span>
-                    <button class="ec-close">×</button>
-                </div>
-                <ul class="eccart-pro-items">
-                    <li>
-                        <a href="product-left-sidebar.html" class="sidecart_pro_img">
-                            <img src="~/assets/Home/images/product-image1/1.jpg" alt="product" />
-                        </a>
-                        <div class="ec-pro-content">
-                            <a href="single-product-left-sidebar.html"
-                               class="cart_pro_title">کت چرم مردانه زمستانی</a>
-                            <span class="cart-price"><span>4900 تومان</span> x 1</span>
-                            <div class="qty-plus-minus">
-                                <input class="qty-input"
-                                       type="text"
-                                       name="ec_qtybtn"
-                                       value="1" />
-                            </div>
-                            <a href="#" class="remove">×</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="ec-cart-bottom">
-                <div class="cart-sub-total">
-                    <table class="table cart-table">
-                        <tbody>
-                            <tr>
-                                <td class="text-left">کل:</td>
-                                <td class="text-right primary-color">36000 تومان</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="cart_btn">
-                    <a href="cart.html" class="btn btn-primary">مشاهده سبد خرید</a>
-                    <a href="checkout.html" class="btn btn-secondary">ادامه خرید </a>
-                </div>
-            </div>
+
+            @await Component.InvokeAsync("CustomerCart")
+                <!--  CustomerCartViewComponent   -->
+ 
         </div>
     </div>
     <!-- سبد خرید -->
@@ -893,35 +873,39 @@
     <div id="wishlist_toast" class="wishlist_toast">
         <div class="desc">شما با موفقیت به لیست علاقه مندی ها اضافه کرده اید</div>
     </div>
-    <!-- Add to Cart successfully toast end -->
     <!-- Vendor JS -->
-    <script data-cfasync="false"
-            src="~/assets/Home/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script data-cfasync="false" src="~/assets/Home/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    
     <script src="~/assets/Home/js/vendor/jquery-3.5.1.min.js"></script>
-    <script src="~/assets/Home/js/vendor/jquery.notify.min.js"></script>
-    <script src="~/assets/Home/js/vendor/jquery.bundle.notify.min.js"></script>
     <script src="~/assets/Home/js/vendor/popper.min.js"></script>
     <script src="~/assets/Home/js/vendor/bootstrap.min.js"></script>
     <script src="~/assets/Home/js/vendor/jquery-migrate-3.3.0.min.js"></script>
     <script src="~/assets/Home/js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="~/assets/Home/js/vendor/jquery.notify.min.js"></script>
     <script src="~/assets/Home/js/vendor/jquery.bundle.notify.min.js"></script>
+    <script src="~/assets/Home/js/vendor/jquery.magnific-popup.min.js"></script>
+   
+    
     <!--Plugins JS-->
-
-    <script src="~/assets/Home/js/plugins/jquery.sticky-sidebar.js"></script>
     <script src="~/assets/Home/js/plugins/swiper-bundle.min.js"></script>
     <script src="~/assets/Home/js/plugins/countdownTimer.min.js"></script>
-    <script src="~/assets/Home/js/plugins/nouislider.js"></script>
     <script src="~/assets/Home/js/plugins/scrollup.js"></script>
     <script src="~/assets/Home/js/plugins/jquery.zoom.min.js"></script>
     <script src="~/assets/Home/js/plugins/slick.min.js"></script>
-    <script src="~/assets/Home/js/plugins/owl.carousel.min.js"></script>
     <script src="~/assets/Home/js/plugins/infiniteslidev2.js"></script>
+    <script src="~/assets/Home/js/plugins/jquery.sticky-sidebar.js"></script>
+    <script src="~/assets/Home/js/plugins/nouislider.js"></script>
+    <script src="~/assets/Home/js/plugins/owl.carousel.min.js"></script>
     <script src="~/assets/Home/js/plugins/click-to-call.js"></script>
 
     <!-- Main Js -->
     <script src="~/assets/Home/js/vendor/index.js"></script>
     <script src="~/assets/Home/js/demo-8.js"></script>
+    @if (ViewData["title"] == "ProductfullPage")
+    {
+        <script src="~/assets/Home/js/main.js"></script>
+        
+    }
 
     <!-- MVC Js -->
     @*<script src="~/lib/jquery/dist/jquery.min.js"></script>
