--- a/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Views/_ViewImports.cshtml
@@ -5,4 +5,6 @@
 @using App.Domain.Core._Booth.Dtos.BoothDtos;
 @using App.Domain.Core._User.Entities;
 @using Microsoft.AspNetCore.Identity
+@using App.Domain.Core._Common.Dtos.AppSettingDtos;
+@using App.EndPoints.MvcUi.Models._Customer;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
