--- a/App.EndPoints.MvcUi/Views/Shared/_Layout.cshtml
+++ b/App.EndPoints.MvcUi/Views/Shared/_Layout.cshtml
@@ -868,7 +868,7 @@
     <!-- Footer navigation panel for responsive display end -->
     <!-- Add to Cart successfully toast Start -->
     <div id="addtocart_toast" class="addtocart_toast">
-        <div class="desc">شما به طور موفقیت آمیز به سبد خرید اضافه کرده اید</div>
+        <div class="desc">برای خرید ابتدا وارد حساب کاربری خود شوید.</div>
     </div>
     <div id="wishlist_toast" class="wishlist_toast">
         <div class="desc">شما با موفقیت به لیست علاقه مندی ها اضافه کرده اید</div>
