--- a/App.EndPoints.MvcUi/wwwroot/assets/Home/css/demo8.css
+++ b/App.EndPoints.MvcUi/wwwroot/assets/Home/css/demo8.css
@@ -19644,21 +19644,21 @@ ul.slick-dots {
 
 /*-----  Add To Cart Toast  -----*/
 .addtocart_toast {
-  visibility: hidden;
-  min-width: 290px;
-  height: auto;
-  margin: auto;
-  background-color: rgba(0, 128, 0, 0.8);
-  color: #ffffff;
-  text-align: center;
-  border-radius: 30px;
-  position: fixed;
-  z-index: 9999;
-  left: 15px;
-  right: auto;
-  bottom: 15px;
-  font-size: 14px;
-  white-space: nowrap;
+    visibility: hidden;
+    min-width: 290px;
+    height: auto;
+    margin: auto;
+    background-color: darkred;
+    color: #ffffff;
+    text-align: center;
+    border-radius: 30px;
+    position: fixed;
+    z-index: 9999;
+    left: 15px;
+    right: auto;
+    bottom: 15px;
+    font-size: 14px;
+    white-space: nowrap;
 }
 
 .addtocart_toast .desc {
